Projetos/ACBr32_DLL/ACBr_C/Exemplo_C/include/ACBr.h

#define DllImport extern "C"
#define DllImport extern

typedef void* ACBR_HANDLE;

typedef char* PCHAR;

typedef char BOOL;


typedef struct
{
      char Indice[4];
      double Aliquota;
      char Tipo;
      double Total;
      char Sequencia;
} AliquotaRec;



typedef struct
{
      char Indice[4];
      char Descricao[30];
      BOOL PermiteVinculado;
      double Total;
} FormaPagamentoRec;

DllImport int ECF_GetTotalAcrescimosISSQN(const ACBR_HANDLE ecfHandle, double* value);

DllImport int ECF_GetTotalSubstituicaoTributariaISSQN(const ACBR_HANDLE ecfHandle, double* value);

DllImport int ECF_GetTotalNaoTributadoISSQN(const ACBR_HANDLE ecfHandle, double* value);

DllImport int ECF_GetTotalIsencaoISSQN(const ACBR_HANDLE ecfHandle, double* value);

DllImport int ECF_GetTotalNaoFiscal(const ACBR_HANDLE ecfHandle, double* value);

DllImport int ECF_GetNumUltItem(const ACBR_HANDLE ecfHandle);

DllImport int ECF_GetEmLinha(const ACBR_HANDLE ecfHandle, const int timeOut);

DllImport int ECF_GetPoucoPapel(const ACBR_HANDLE ecfHandle);

DllImport int ECF_GetEstado(const ACBR_HANDLE ecfHandle);

DllImport int ECF_GetHorarioVerao(const ACBR_HANDLE ecfHandle);

DllImport int ECF_GetArredonda(const ACBR_HANDLE ecfHandle);

DllImport int ECF_GetTermica(const ACBR_HANDLE ecfHandle);

DllImport int ECF_GetMFD(const ACBR_HANDLE ecfHandle);

DllImport int ECF_GetIdentificaConsumidorRodape(const ACBR_HANDLE ecfHandle);

DllImport int ECF_GetSubTotal(const ACBR_HANDLE ecfHandle, double* value);

DllImport int ECF_GetTotalPago(const ACBR_HANDLE ecfHandle, double* value);

DllImport int ECF_GetGavetaAberta(const ACBR_HANDLE ecfHandle);

DllImport int ECF_GetChequePronto(const ACBR_HANDLE ecfHandle);

DllImport int ECF_GetIntervaloAposComando(const ACBR_HANDLE ecfHandle);

DllImport int ECF_SetIntervaloAposComando(const ACBR_HANDLE ecfHandle, const int intervalo);

DllImport int ECF_GetDescricaoGrande(const ACBR_HANDLE ecfHandle);

DllImport int ECF_SetDescricaoGrande(const ACBR_HANDLE ecfHandle, BOOL descricaoGrande);

DllImport int ECF_GetGavetaSinalInvertido(const ACBR_HANDLE ecfHandle);

DllImport int ECF_SetGavetaSinalInvertido(const ACBR_HANDLE ecfHandle, BOOL gavetaSinalInvertido);

DllImport int ECF_GetOperador(const ACBR_HANDLE ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_SetOperador(const ACBR_HANDLE ecfHandle, const PCHAR operador);

DllImport int ECF_GetLinhasEntreCupons(const ACBR_HANDLE ecfHandle);

DllImport int ECF_SetLinhasEntreCupons(const ACBR_HANDLE ecfHandle, const int linhasEntreCupons);

DllImport int ECF_GetDecimaisPreco(const ACBR_HANDLE ecfHandle);

DllImport int ECF_SetDecimaisPreco(const ACBR_HANDLE ecfHandle, const int decimaisPreco);

DllImport int ECF_GetDecimaisQtd(const ACBR_HANDLE ecfHandle);

DllImport int ECF_SetDecimaisQtd(const ACBR_HANDLE ecfHandle, const int decimaisQtd);

DllImport int ECF_IdentificaConsumidor(const ACBR_HANDLE ecfHandle, const PCHAR cpfCnpj, const PCHAR nome, const PCHAR endereco);

DllImport int ECF_AbreCupom(const ACBR_HANDLE ecfHandle, const PCHAR cpfCnpj, const PCHAR nome, const PCHAR endereco);

DllImport int ECF_LegendaInmetroProximoItem(const ACBR_HANDLE ecfHandle);

DllImport int ECF_VendeItem(const ACBR_HANDLE ecfHandle, const PCHAR codigo, const PCHAR descricao, const PCHAR aliquotaICMS, const double qtd, const double valorUnitario, const double descontoPorc, const PCHAR unidade, const PCHAR tipoDescontoAcrescimo, const PCHAR descontoAcrescimo);

DllImport int ECF_DescontoAcrescimoItemAnterior(const ACBR_HANDLE ecfHandle, const double valorDescontoAcrescimo, const PCHAR descontoAcrescimo);

DllImport int ECF_SubtotalizaCupom(const ACBR_HANDLE ecfHandle, const double descontoAcrescimo, const PCHAR mensagemRodape);

DllImport int ECF_EfetuaPagamento(const ACBR_HANDLE ecfHandle, const PCHAR codFormaPagto, const double valor, const PCHAR observacao, BOOL imprimeVinculado);

DllImport int ECF_EstornaPagamento(const ACBR_HANDLE ecfHandle, const PCHAR codFormaPagtoEstornar, const PCHAR codFormaPagtoEfetivar, const double valor, const PCHAR observacao);

DllImport int ECF_FechaCupom(const ACBR_HANDLE ecfHandle, const PCHAR observacao);

DllImport int ECF_CancelaCupom(const ACBR_HANDLE ecfHandle);

DllImport int ECF_CancelaItemVendido(const ACBR_HANDLE ecfHandle, const int numItem);

DllImport int ECF_CancelaItemVendidoParcial(const ACBR_HANDLE ecfHandle, const int numItem, const double quantidade);

DllImport int ECF_CancelaDescontoAcrescimoItem(const ACBR_HANDLE ecfHandle, const int numItem);

DllImport int ECF_CancelaDescontoAcrescimoSubTotal(const ACBR_HANDLE ecfHandle, char tipoAcrescimoDesconto);

DllImport int ECF_LeituraX(const ACBR_HANDLE ecfHandle);

DllImport int ECF_ReducaoZ(const ACBR_HANDLE ecfHandle);

DllImport int ECF_AbreRelatorioGerencial(const ACBR_HANDLE ecfHandle, const int indice);

DllImport int ECF_LinhaRelatorioGerencial(const ACBR_HANDLE ecfHandle, const PCHAR linha, const int indiceBMP);

DllImport int ECF_AbreCupomVinculado(const ACBR_HANDLE ecfHandle, const PCHAR coo, const PCHAR codFormaPagto, const double valor);

DllImport int ECF_AbreCupomVinculadoCNF(const ACBR_HANDLE ecfHandle, const PCHAR coo, const PCHAR codFormaPagto, const PCHAR codComprovanteNaoFiscal, const double valor);

DllImport int ECF_LinhaCupomVinculado(const ACBR_HANDLE ecfHandle, const PCHAR linha);

DllImport int ECF_FechaRelatorio(const ACBR_HANDLE ecfHandle);

DllImport int ECF_PulaLinhas(const ACBR_HANDLE ecfHandle, const int numLinhas);

DllImport int ECF_CortaPapel(const ACBR_HANDLE ecfHandle, BOOL corteParcial);

DllImport int ECF_GetAliquota(const ACBR_HANDLE ecfHandle, AliquotaRec* aliquota, const int index);

DllImport int ECF_CarregaAliquotas(const ACBR_HANDLE ecfHandle);

DllImport int ECF_LerTotaisAliquota(const ACBR_HANDLE ecfHandle);

DllImport int ECF_ProgramaAliquota(const ACBR_HANDLE ecfHandle, const double aliquota, char tipo, const PCHAR posicao);

DllImport int ECF_GetFormaPagamento(const ACBR_HANDLE ecfHandle, FormaPagamentoRec* formaPagamento, const int index);

DllImport int ECF_CarregaFormasPagamento(const ACBR_HANDLE ecfHandle);

DllImport int ECF_LerTotaisFormaPagamento(const ACBR_HANDLE ecfHandle);

DllImport int ECF_ProgramaFormaPagamento(const ACBR_HANDLE ecfHandle, const PCHAR descricao, BOOL permiteVinculado, const PCHAR posicao);