Projetos/ACBr32_DLL/ACBr.Net/ACBr.Net/ACBrDll.cs


        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetTotalAcrescimosISSQN(IntPtr ecfHandle, ref double value);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetTotalSubstituicaoTributariaISSQN(IntPtr ecfHandle, ref double value);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetTotalNaoTributadoISSQN(IntPtr ecfHandle, ref double value);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetTotalIsencaoISSQN(IntPtr ecfHandle, ref double value);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetTotalNaoFiscal(IntPtr ecfHandle, ref double value);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetNumUltItem(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetEmLinha(IntPtr ecfHandle, int timeOut);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetPoucoPapel(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetEstado(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetHorarioVerao(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetArredonda(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetTermica(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetMFD(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetIdentificaConsumidorRodape(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetSubTotal(IntPtr ecfHandle, ref double value);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetTotalPago(IntPtr ecfHandle, ref double value);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetGavetaAberta(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetChequePronto(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetIntervaloAposComando(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_SetIntervaloAposComando(IntPtr ecfHandle, int intervalo);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetDescricaoGrande(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_SetDescricaoGrande(IntPtr ecfHandle, bool descricaoGrande);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetGavetaSinalInvertido(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_SetGavetaSinalInvertido(IntPtr ecfHandle, bool gavetaSinalInvertido);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetOperador(IntPtr ecfHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_SetOperador(IntPtr ecfHandle, string operador);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetLinhasEntreCupons(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_SetLinhasEntreCupons(IntPtr ecfHandle, int linhasEntreCupons);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetDecimaisPreco(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_SetDecimaisPreco(IntPtr ecfHandle, int decimaisPreco);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetDecimaisQtd(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_SetDecimaisQtd(IntPtr ecfHandle, int decimaisQtd);

        #endregion Propriedades do Componente

        #region Cupom Fiscal

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_IdentificaConsumidor(IntPtr ecfHandle, string cpfCnpj, string nome, string endereco);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_AbreCupom(IntPtr ecfHandle, string cpfCnpj, string nome, string endereco);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_LegendaInmetroProximoItem(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_VendeItem(IntPtr ecfHandle, string codigo, string descricao, string aliquotaICMS, double qtd, double valorUnitario, double descontoPorc, string unidade, string tipoDescontoAcrescimo, string descontoAcrescimo);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_DescontoAcrescimoItemAnterior(IntPtr ecfHandle, double valorDescontoAcrescimo, string descontoAcrescimo);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_SubtotalizaCupom(IntPtr ecfHandle, double descontoAcrescimo, string mensagemRodape);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_EfetuaPagamento(IntPtr ecfHandle, string codFormaPagto, double valor, string observacao, bool imprimeVinculado);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_EstornaPagamento(IntPtr ecfHandle, string codFormaPagtoEstornar, string codFormaPagtoEfetivar, double valor, string observacao);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_FechaCupom(IntPtr ecfHandle, string observacao);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_CancelaCupom(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_CancelaItemVendido(IntPtr ecfHandle, int numItem);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_CancelaItemVendidoParcial(IntPtr ecfHandle, int numItem, double quantidade);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_CancelaDescontoAcrescimoItem(IntPtr ecfHandle, int numItem);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_CancelaDescontoAcrescimoSubTotal(IntPtr ecfHandle, char tipoAcrescimoDesconto);

        #endregion Cupom Fiscal

        #region Relatórios

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_LeituraX(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_ReducaoZ(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_AbreRelatorioGerencial(IntPtr ecfHandle, int indice);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_LinhaRelatorioGerencial(IntPtr ecfHandle, string linha, int indiceBMP);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_AbreCupomVinculado(IntPtr ecfHandle, string coo, string codFormaPagto, double valor);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_AbreCupomVinculadoCNF(IntPtr ecfHandle, string coo, string codFormaPagto, string codComprovanteNaoFiscal, double valor);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_LinhaCupomVinculado(IntPtr ecfHandle, string linha);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_FechaRelatorio(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_PulaLinhas(IntPtr ecfHandle, int numLinhas);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_CortaPapel(IntPtr ecfHandle, bool corteParcial);

        #endregion Relatórios

        #region Alíquotas

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetAliquota(IntPtr ecfHandle, ref AliquotaRec aliquota, int index);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_CarregaAliquotas(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_LerTotaisAliquota(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_ProgramaAliquota(IntPtr ecfHandle, double aliquota, char tipo, string posicao);

        #endregion Alíquotas

        #region Formas de Pagto

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetFormaPagamento(IntPtr ecfHandle, ref FormaPagamentoRec formaPagamento, int index);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_CarregaFormasPagamento(IntPtr ecfHandle);
        
        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_LerTotaisFormaPagamento(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_ProgramaFormaPagamento(IntPtr ecfHandle, string descricao, bool permiteVinculado, string posicao);

        #endregion Formas de Pagto

        #region Comprovante não fiscal
